# WatchFlower

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  WatchFlower.pro  deploy_linux.sh  deploy_macos.sh  deploy_windows.sh  resources.qrc
.github/: FUNDING.yml  feature_request.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  builds.yml  builds_desktop.yml  builds_mobile.yml  flatpak.yml
assets/: COPYING  assets.qrc  devices.qrc  icons.qrc  plants.qrc
assets/android/: AndroidManifest.xml  build.gradle  gradle.properties
assets/app/: AndroidManifest.xml  watchflower.appdata.xml  watchflower.desktop
assets/demo/: demo.qrc  demo_settings.conf
assets/desktop/: watchflower.appdata.xml  watchflower.desktop  watchflower.icns
assets/devices/: devices_sensors.json
assets/icons/: COPYING  IconLibrary.qrc
assets/ios/: AppLaunchScreen.storyboard  Info.plist
assets/linux/: WatchFlower.appdata.xml  WatchFlower.desktop  WatchFlower.flatpak.yml  watchflower.appdata.xml  watchflower.desktop  watchflower.flatpak.yml
assets/macos/: Info.plist  WatchFlower.entitlements
assets/plants/: watchflower_plantdb.csv
assets/windows/: WatchFlower.rc  info.rc  setup.nsi
doc/: README.md  flowercare-api.md  flowerpower-api.md  higrow-api.md  parrotpot-api.md  ropot-api.md  thermometers.md
docs/: README.md  bparasite-ble-api.md  bthome-ble-api.md  cgd1-ble-api.md  cgdk2-ble-api.md  cgdn1-ble-api.md  cgg1-ble-api.md  cgp1w-ble-api.md  ess-ble-api.md  flowercare-ble-api.md  flowercare_tuya-ble-api.md  flowerpower-ble-api.md  higrow-ble-api.md  howto-custom-sensor.md  jqjcy01ym-ble-api.md  lywsd02-ble-api.md  lywsd03mmc-ble-api.md  lywsdcgq-ble-api.md  mhoc303-ble-api.md  mhoc401-ble-api.md  mibeacon-ble-api.md  mjwsd05mmc-ble-api.md  parrotpot-ble-api.md  qingping-ble-api.md  ropot-ble-api.md  thermobeacon-ble-api.md  wp6003-ble-api.md  xmwsdjo4mmc-ble-api.md
i18n/: README.md  RYLO-SmartCare_ca.ts  RYLO-SmartCare_da.ts  RYLO-SmartCare_de.ts  RYLO-SmartCare_en.ts  RYLO-SmartCare_es.ts  RYLO-SmartCare_fr.ts  RYLO-SmartCare_fy.ts  RYLO-SmartCare_hu.ts  RYLO-SmartCare_nb.ts  RYLO-SmartCare_nl.ts  RYLO-SmartCare_nn.ts  RYLO-SmartCare_pl.ts  RYLO-SmartCare_pt.ts  RYLO-SmartCare_ru.ts  RYLO-SmartCare_zh_CN.ts  RYLO-SmartCare_zh_TW.ts  WatchFlower_ca.ts  WatchFlower_da.ts  WatchFlower_de.ts  WatchFlower_en.ts  WatchFlower_es.ts  WatchFlower_fr.ts  WatchFlower_fy.ts  WatchFlower_hu.ts  WatchFlower_nb.ts  WatchFlower_nl.ts  WatchFlower_nn.ts  WatchFlower_pt.ts  WatchFlower_ru.ts  WatchFlower_zh_CN.ts  WatchFlower_zh_TW.ts  i18n.qrc  watchflower_ca.ts  watchflower_da.qm  watchflower_da.ts  watchflower_de.qm  watchflower_de.ts  watchflower_en.qm  watchflower_en.ts  (+24 more)
qml/: About.qml  ChartBox.qml  DesktopAbout.qml  DesktopApplication.qml  DesktopDeviceBox.qml  DesktopDeviceList.qml  DesktopGeometrySaver.qml  DesktopHeader.qml  DesktopMain.qml  DesktopSettings.qml  DeviceBox.qml  DeviceBoxDesktop.qml  DeviceBoxMobile.qml  DeviceBrowser.qml  DeviceDatasBox.qml  DeviceEnvironmental.qml  DeviceExtended.qml  DeviceGeiger.qml  DeviceList.qml  DeviceListSplit.qml  DeviceListUnified.qml  DeviceNearbyWidget.qml  DevicePlantSensor.qml  DevicePlantSensorCare.qml  DevicePlantSensorData.qml  DevicePlantSensorHistory.qml  DevicePlantSensorJournal.qml  DevicePlantSensorLimits.qml  DevicePlantSensorSettings.qml  DeviceScreen.qml  DeviceScreenAioCharts.qml  DeviceScreenBarCharts.qml  DeviceScreenCharts.qml  DeviceScreenData.qml  DeviceScreenDatas.qml  DeviceScreenHistory.qml  DeviceScreenLimits.qml  DeviceThermometer.qml  DeviceWidget.qml  Header.qml  (+53 more)
qml/ComponentLibrary/: ComponentLibrary.qrc  ThemeEngine.qml
qml/charts/: ChartEnvironmentalVoc.qml  ChartEnvironmentalVocBar.qml  ChartHistory.qml  ChartPlantDataAio.qml  ChartThermometerMinMax.qml  ChartThermometerMinMaxBar.qml
qml/components/: ActionButton.qml  ActionMenu.qml  ActionMenuFixed.qml  ActionMenuItem.qml  ActionbarActions.qml  ActionbarBluetooth.qml  ActionbarSelection.qml  ActionbarSync.qml  AirQualityIndicator.qml  AlarmIndicator.qml  ButtonCompactable.qml  ButtonExperimental.qml  ChartEnvironmentalVoc.qml  ChartEnvironmentalVocBar.qml  ChartHistory.qml  ChartPlantDataAio.qml  ChartThermometerMinMax.qml  ChartThermometerMinMaxBar.qml  DatePicker.qml  EnvBox.qml  IndicatorsCompact.qml  IndicatorsSolid.qml  ItemAioBarCharts.qml  ItemAioLineCharts.qml  ItemBannerSync.qml  ItemButtonCompactable.qml  ItemDataBar.qml  ItemDataBarDispatch.qml  ItemDataChart.qml  ItemDeletePopup.qml  ItemEnvBox.qml  ItemImageButton.qml  ItemIndicatorsCompact.qml  ItemIndicatorsFilled.qml  ItemIndicatorsSolid.qml  ItemLoadData.qml  ItemMenuButton.qml  ItemNoBluetooth.qml  ItemNoData.qml  ItemNoDatas.qml  (+23 more)
qml/components_generic/: ActionMenu.qml  ActionMenuItem.qml  ActionMenuSeparator.qml  ActionMenu_bottom.qml  ActionMenu_floating.qml  AndroidButton.qml  AndroidButtonIcon.qml  AndroidTextField.qml  ButtonAndroid.qml  ButtonAndroidIcon.qml  ButtonAndroidImage.qml  ButtonCompactable.qml  ButtonIcon.qml  ButtonImage.qml  ButtonImageThemed.qml  ButtonText.qml  ButtonWireframe.qml  ButtonWireframeIcon.qml  ButtonWireframeIconCentered.qml  ButtonWireframeImage.qml  CsdLinux.qml  CsdMac.qml  CsdWindows.qml  DataBarCompact.qml  DataBarSolid.qml  DatePicker5.qml  (+64 more)
src/: AndroidService.cpp  AndroidService.h  DatabaseManager.cpp  DatabaseManager.h  DeviceFilter.cpp  DeviceFilter.h  DeviceManager.cpp  DeviceManager.h  DeviceManager_advertisement.cpp  DeviceManager_export.cpp  DeviceManager_nearby.cpp  Journal.cpp  Journal.h  MenubarManager.cpp  MenubarManager.h  NotificationManager.cpp  NotificationManager.h  Plant.cpp  Plant.h  PlantDatabase.cpp  PlantDatabase.h  PlantUtils.h  SettingsManager.cpp  SettingsManager.h  SystrayManager.cpp  SystrayManager.h  demomode.h  device.cpp  device.h  device_environmental.cpp  device_environmental.h  device_esp32_geiger.cpp  device_esp32_geiger.h  device_esp32_higrow.cpp  device_esp32_higrow.h  device_filter.cpp  device_filter.h  device_firmwares.h  device_flowercare.cpp  device_flowercare.h  (+51 more)
(+292 files in other folders)
